use posix_part_file in mmap_storage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,6 @@ set(libtorrent_include_files
 	operations
 	optional
 	parse_url
-	part_file
 	pe_crypto
 	peer
 	peer_class
@@ -235,6 +234,7 @@ set(libtorrent_aux_include_files
 	path
 	polymorphic_socket
 	portmap
+	posix_part_file
 	proxy_settings
 	range
 	receive_buffer
@@ -331,7 +331,6 @@ set(sources
 	merkle
 	merkle_tree
 	natpmp
-	part_file
 	packet_buffer
 	piece_picker
 	platform_util
@@ -398,6 +397,7 @@ set(sources
 	mmap_disk_io
 	mmap_storage
 	posix_disk_io
+	posix_part_file
 	posix_storage
 	ssl
 
