separate the directory class from file.cpp, into its own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,7 @@ set(libtorrent_aux_include_files
 	deprecated
 	deque
 	dev_random
+	directory
 	disable_warnings_pop
 	disable_warnings_push
 	disk_buffer_pool
@@ -290,6 +291,7 @@ set(sources
 	cpuid
 	crc32c
 	create_torrent
+	directory
 	disk_buffer_holder
 	entry
 	error_code
