--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,15 +9,27 @@ image: Visual Studio 2017
 clone_depth: 1
 environment:
   matrix:
-    - cmake: 1
+    - variant: debug
+      compiler: msvc-14.1
+      model: 64
+      api: store
+      lib: 1
+    - variant: debug
+      compiler: msvc-14.1
+      model: 32
+      lib: 1
+    - variant: debug
+      compiler: gcc
+      model: 32
+      crypto: openssl
+      ssl_lib: /usr/local/include
+      ssl_include: /usr/local/lib
+      lib: 1
     - variant: debug
       compiler: msvc-14.1
       model: 64
       sim: 1
-    - variant: debug
-      compiler: msvc-14.1
-      model: 32
-      bjam: 1
+    - cmake: 1
     - variant: release
       compiler: msvc-14.1
       model: 64
@@ -26,15 +38,9 @@ environment:
       crypto: openssl
       ssl_lib: c:\OpenSSL-v111-Win64\lib
       ssl_include: c:\OpenSSL-v111-Win64\include
-      bjam: 1
-    - variant: debug
-      compiler: gcc
-      model: 32
-      crypto: openssl
-      ssl_lib: /usr/local/include
-      ssl_include: /usr/local/lib
-      bjam: 1
-      test_target: deterministic-tests
+      tests: 1
+      examples: 1
+      tools: 1
 
 artifacts:
   - path: bindings/python/dist/*
@@ -44,11 +50,11 @@ install:
   - git submodule update --init --recursive
   - set ROOT_DIRECTORY=%CD%
   - cd %ROOT_DIRECTORY%
+  - if not defined api ( set api="desktop" )
   - if not defined compiler ( set compiler="" )
   - if not defined crypto ( set crypto=built-in )
   - if not defined ssl_lib ( set ssl_lib=c:\ )
   - if not defined ssl_include ( set ssl_include=c:\ )
-  - if not defined test_target ( set test_target="" )
   - cd %ROOT_DIRECTORY%
   - set BOOST_ROOT=c:\Libraries\boost_1_69_0
   - set BOOST_BUILD_PATH=%BOOST_ROOT%\tools\build
@@ -69,22 +75,29 @@ install:
   - cd %ROOT_DIRECTORY%
 
 build_script:
+
+  # just the library
+  - cd %ROOT_DIRECTORY%
+  - if defined lib (
+    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10 cxxstd=14
+    )
+
   # examples
   - cd %ROOT_DIRECTORY%\examples
-  - if defined bjam (
-    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on
+  - if defined examples (
+    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10
     )
 
   # tools
   - cd %ROOT_DIRECTORY%\tools
-  - if defined bjam (
-    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on
+  - if defined tools (
+    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10
     )
 
   # test
   - cd %ROOT_DIRECTORY%\test
-  - if defined bjam (
-    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on testing.execute=off
+  - if defined tests (
+    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10 testing.execute=off
     )
 
   # python binding
@@ -93,7 +106,7 @@ build_script:
   # boost.python itself doesn't build warning free, so we can't build
   # with warnings-as-errors
   - if defined python (
-    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on libtorrent-link=shared stage_module stage_dependencies
+    b2.exe --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10 libtorrent-link=shared stage_module stage_dependencies
     )
   - if defined python_dist (
     c:\Python35-x64\python.exe setup.py bdist --format=msi
@@ -120,8 +133,8 @@ build_script:
 
 test_script:
   - cd %ROOT_DIRECTORY%\test
-  - if defined bjam (
-    appveyor-retry b2.exe -l500 --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on %test_target%
+  - if defined tests (
+    appveyor-retry b2.exe -l500 --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on windows-api=%api% windows-version=win10
     )
 
   - cd %ROOT_DIRECTORY%\bindings\python
