--- a/.travis.yml
+++ b/.travis.yml
@@ -211,7 +211,7 @@ script:
   - 'if [ "$tests" == "1" ]; then
       ${B2} -j2 warnings-as-errors=on warnings=all ${B2_ARGS} testing.execute=off &&
       travis_retry ${B2} -j3 warnings-as-errors=on warnings=all ${B2_ARGS} -l300 &&
-      travis_retry ${B2} -j2 warnings-as-errors=on warnings=all ${B2_ARGS} test_natpmp enum_if -l300 &&
+      travis_retry ${B2} -j2 warnings-as-errors=on warnings=all ${B2_ARGS} test_upnp test_natpmp enum_if -l300 &&
       if [[ $TRAVIS_OS_NAME != "osx" ]]; then
         travis_retry ${B2} -j2 warnings-as-errors=on warnings=all ${B2_ARGS} test_lsd -l300;
       fi &&
