fix cmake install directory for absolute paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -814,6 +814,10 @@ include(CheckCXXCompilerFlag)
 
 add_subdirectory(bindings)
 
+if(IS_ABSOLUTE "${CMAKE_INSTALL_LIBDIR}")
+	file(RELATIVE_PATH CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}" "${CMAKE_INSTALL_LIBDIR}")
+endif()
+
 install(TARGETS torrent-rasterbar EXPORT LibtorrentRasterbarTargets
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
