improve website preview for links

--- a/docs/makefile
+++ b/docs/makefile
@@ -86,6 +86,7 @@ FIGURES = $(addprefix img/, \
 
 STAGE_IMG = $(addprefix img/, \
 	logo-color-text \
+	logo-color \
 	screenshot \
 	bitcoin \
 	ip_id_v4 \
