--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -807,12 +807,8 @@ if (webtorrent)
 endif()
 
 # Boost
-find_public_dependency(Boost REQUIRED)
+find_public_dependency(Boost 1.75.0 REQUIRED)
 target_include_directories(torrent-rasterbar PUBLIC ${Boost_INCLUDE_DIRS})
-if (Boost_MAJOR_VERSION LESS_EQUAL 1 AND Boost_MINOR_VERSION LESS 69)
-	find_package(Boost REQUIRED COMPONENTS system)
-	target_link_libraries(torrent-rasterbar PUBLIC ${Boost_SYSTEM_LIBRARY})
-endif()
 
 if (exceptions)
 	if (MSVC)
