Fix GitHub Actions workflows running on Ubuntu
Always update package lists before attempting to install any packages.

This prevents update failures due to attempted downloads of packages that no longer exist.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
 
+      - name: update package lists
+        run: |
+          sudo apt update
+
       - name: install dependencies
         run: |
           sudo apt install python-docutils python-pygments python-pil gsfonts inkscape icoutils graphviz hunspell imagemagick
