ignore apt update failures on github actions

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: update package lists
       if: runner.os == 'Linux'
+      continue-on-error: true
       run: |
         sudo apt update
 
