--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2.3.3
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
