--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -23,6 +23,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -62,6 +63,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -88,6 +90,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -113,6 +116,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -146,6 +150,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -176,6 +181,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -202,6 +208,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
@@ -236,6 +243,7 @@ jobs:
            submodules: recursive
 
       - name: update package lists
+        continue-on-error: true
         run: |
           sudo apt update
 
