--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ env:
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_MANYLINUX_I686_IMAGE: manylinux2014
 
-  CIBW_SKIP: cp27-* pp*
+  CIBW_SKIP: cp27-* cp35-* pp*
 
 jobs:
   build:
@@ -62,23 +62,23 @@ jobs:
       uses: actions/cache@v2
       with:
         path: C:\\Boost
-        key: windows-boost-174
-        restore-keys: windows-boost-174
+        key: windows-boost-175
+        restore-keys: windows-boost-175
 
     - name: Cache Boost on macOS
       if: runner.os == 'macOS'
       uses: actions/cache@v2
       with:
         path: |
-          /usr/local/Cellar/boost-build/1.74.0
-          /usr/local/Cellar/boost/1.74.0
+          /usr/local/Cellar/boost-build/1.75.0
+          /usr/local/Cellar/boost/1.75.0
           /usr/local/opt/boost
           /usr/local/include/boost
           /usr/local/lib/libboost_*
           /usr/local/share/boost-build
           /usr/local/bin/b2
-        key: macos-boost-174
-        restore-keys: macos-boost-174
+        key: macos-boost-175
+        restore-keys: macos-boost-175
 
     - name: Install Visual C++ Developer Command Prompt
       if: runner.os == 'Windows'
