disable clang warnings on implicit float conversion in examples and tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,10 @@ if (MSVC)
 	target_compile_options(test_common PUBLIC /wd4127 /wd4309 /wd4310 )
 endif()
 
+if(CMAKE_CXX_COMPILER_ID MATCHES Clang)
+	target_compile_options(test_common PUBLIC -Wno-implicit-int-float-conversion)
+endif()
+
 foreach(TARGET_SRC ${tests})
 	get_filename_component(TARGET ${TARGET_SRC} NAME_WE)
 	add_executable(${TARGET} ${TARGET_SRC})
