--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,10 +13,10 @@ task:
     echo "using clang ;" > ~/user-config.jam
   submodules_script: |
     git submodule update --init --recursive
-  build_cmake_script: |
-    cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-Werror" -DCMAKE_CXX_STANDARD=17 -Dbuild_tests=ON -Dbuild_examples=ON -Dbuild_tools=ON -Dpython-bindings=OFF -G Ninja .
-    cmake --build . --parallel 2
-    ./test/test_primitives
+#  build_cmake_script: |
+#    cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-Werror" -DCMAKE_CXX_STANDARD=17 -Dbuild_tests=ON -Dbuild_examples=ON -Dbuild_tools=ON -Dpython-bindings=OFF -G Ninja .
+#    cmake --build . --parallel 2
+#    ./test/test_primitives
   tests_script: |
     export BOOST_BUILD_PATH=${PWD}/build-boost-1.74.0
     export PATH=${PWD}/build-boost-1.74.0:$PATH
