failing libatomic test is not a fatal error (it fails on FreeBSD on Cirrus for some reason)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -651,7 +651,7 @@ if (NOT Windows)
 		check_cxx_source_compiles("${ATOMICS_TEST_SOURCE}" HAVE_CXX_ATOMICS_WITH_LIB)
 		check_cxx_source_compiles("${ATOMICS64_TEST_SOURCE}" HAVE_CXX_ATOMICS64_WITH_LIB)
 		if ((NOT HAVE_CXX_ATOMICS_WITH_LIB) OR (NOT HAVE_CXX_ATOMICS64_WITH_LIB))
-			message(FATAL_ERROR "No native support for std::atomic, or libatomic not found!")
+			message(STATUS, "No native support for std::atomic, or libatomic not found! Build link step may fail")
 		else()
 			message(STATUS "Linking with libatomic for atomics support")
 			unset(CMAKE_REQUIRED_LIBRARIES)
