--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,7 +20,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -60,7 +60,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -87,7 +87,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -113,7 +113,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -147,7 +147,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -178,7 +178,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
@@ -204,7 +204,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: update package lists
         continue-on-error: true
