--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,7 +20,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: install boost
         run: |
@@ -45,7 +45,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: install boost
         run: |
@@ -71,7 +71,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       - name: install boost
         run: |
