--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,7 +20,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       # there appears to be a bug in boost-build where referring to a
       # dependency that's on a different drive fails, deep in boost-build
@@ -88,7 +88,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
-           submodules: recursive
+           submodules: true
 
       # there appears to be a bug in boost-build where referring to a
       # dependency that's on a different drive fails, deep in boost-build
