--- a/Makefile.am
+++ b/Makefile.am
@@ -42,7 +42,8 @@ DOCS_IMAGES = \
   docs/img/blue_top.png           \
   docs/img/dotline.gif            \
   docs/img/minus.gif              \
-  docs/img/orange.png
+  docs/img/orange.png             \
+  docs/img/pp-acceptance-medium.png
 
 DOCS_PAGES = \
   docs/building.html              \
