Test with OpenSSL on windows

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,16 +14,33 @@ jobs:
    tests:
       name: Test
       runs-on: windows-2019
+      continue-on-error: true
 
       strategy:
          matrix:
-           config: [ address-model=32, address-model=64, release ]
+           include:
+             - config: address-model=32
+             - config: address-model=64 crypto=openssl openssl-lib=vcpkg\installed\x64-windows\lib\ openssl-include=vcpkg\installed\x64-windows\include
+             - config: release
 
       steps:
       - name: checkout
         uses: actions/checkout@v2.3.3
         with:
            submodules: true
+
+      # we only build with openssl on 64 bit. The github action images comes
+      # with openssl pre-installed, but only the 64 bit version and there's no
+      # naming convention to separate the two. When building the 32 bit version
+      # it appears it still picks up the 64 bit DLL, and fails.
+      - name: install openssl (64 bit)
+        if: ${{ contains(matrix.config, 'crypto=openssl') }}
+        uses: lukka/run-vcpkg@v6
+        with:
+          vcpkgArguments: 'openssl'
+          vcpkgTriplet: 'x64-windows'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+          vcpkgGitCommitId: 0bf3923f9fab4001c00f0f429682a0853b5749e0
 
       # there appears to be a bug in boost-build where referring to a
       # dependency that's on a different drive fails, deep in boost-build
