--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -115,7 +115,10 @@ jobs:
 
       strategy:
          matrix:
-           config: [ asio-debugging=on picker-debugging=on windows-version=vista, windows-api=store windows-version=win10 ]
+           include:
+             - config: asio-debugging=on picker-debugging=on windows-version=vista
+             - config: windows-api=store windows-version=win10
+             - config: deprecated-functions=off
 
       steps:
       - name: checkout
